--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-setw -g mode-mouse on
+set-option -g mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
