Remove stale options from tmux conf

--- a/.apache/extra/httpd-vhosts.conf
+++ b/.apache/extra/httpd-vhosts.conf
@@ -9,15 +9,6 @@
 
 <VirtualHost *:80>
     ServerAdmin nicolas@nbap.com.br
-    DocumentRoot "/Users/nbap/workspace/parafernalia/repos/verococo/wordpress"
-    ServerName verococo.com.br
-    ServerAlias www.verococo.com.br
-    ErrorLog "/private/var/log/apache2/verococo.com.br-error_log"
-    CustomLog "/private/var/log/apache2/verococo.com.br-access_log" common
-</VirtualHost>
-
-<VirtualHost *:80>
-    ServerAdmin nicolas@nbap.com.br
     DocumentRoot "/Users/nbap/workspace/woocommerce/wordpress"
     ServerName testeteste.com.br
     ServerAlias testeteste.com.br
@@ -26,3 +17,46 @@
 </VirtualHost>
 
 
+# VEROCOCO.COM.BR
+
+
+<VirtualHost *:80>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/parafernalia/repos/verococo/wordpress"
+    ServerName verococo.com.br
+    ServerAlias www.verococo.com.br
+    ErrorLog "/private/var/log/apache2/verococo.com.br-error_log"
+    CustomLog "/private/var/log/apache2/verococo.com.br-access_log" common
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/parafernalia/repos/verococo/wordpress"
+    ServerName verococo.com.br
+    ServerAlias www.verococo.com.br
+
+    SSLEngine on
+    SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
+    SSLCertificateFile /etc/apache2/ssl/localhost.crt
+    SSLCertificateKeyFile /etc/apache2/ssl/localhost.key
+
+    <Directory "/Users/nbap/workspace/parafernalia/repos/verococo/wordpress">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+        Require all granted
+    </Directory>
+
+    ErrorLog "/private/var/log/apache2/verococo.com.br-ssl-error_log"
+    CustomLog "/private/var/log/apache2/verococo.com.br-ssl-access_log" common
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/sustentarte/website/wordpress"
+    ServerName novo.sustentarte.org.br
+    ServerAlias novo.sustentarte.org.br
+    ErrorLog "/private/var/log/apache2/sustentarte-error_log"
+    CustomLog "/private/var/log/apache2/sustentarte-access_log" common
+</VirtualHost>
