--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-set-option -g mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
 set -g base-index 1
 set -g pane-base-index 1
+set -g mouse on
