--- a/.apache/extra/httpd-vhosts.conf
+++ b/.apache/extra/httpd-vhosts.conf
@@ -60,3 +60,44 @@
     ErrorLog "/private/var/log/apache2/sustentarte-error_log"
     CustomLog "/private/var/log/apache2/sustentarte-access_log" common
 </VirtualHost>
+
+<VirtualHost *:80>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/hartman"
+    ServerName hartmanfiberglass.local
+    ServerAlias hartmanfiberglass.local
+    ErrorLog "/private/var/log/apache2/hartman-error_log"
+    CustomLog "/private/var/log/apache2/hartman-access_log" common
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/parafernalia/repos/jota-wordpress/wordpress"
+    ServerName jota.info
+    ServerAlias www.jota.info
+    ErrorLog "/private/var/log/apache2/jota.info-error_log"
+    CustomLog "/private/var/log/apache2/jota.info-access_log" common
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin nicolas@nbap.com.br
+    DocumentRoot "/Users/nbap/workspace/parafernalia/repos/jota-wordpress/wordpress"
+    ServerName jota.info
+    ServerAlias www.jota.info
+
+    SSLEngine on
+    SSLCipherSuite ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:+eNULL
+    SSLCertificateFile /etc/apache2/ssl/localhost.crt
+    SSLCertificateKeyFile /etc/apache2/ssl/localhost.key
+
+    <Directory "/Users/nbap/workspace/parafernalia/repos/jota-wordpress/wordpress">
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+        Require all granted
+    </Directory>
+
+    ErrorLog "/private/var/log/apache2/jota.info-ssl-error_log"
+    CustomLog "/private/var/log/apache2/jota.info-ssl-access_log" common
+</VirtualHost>
