--- a/.gitconfig
+++ b/.gitconfig
@@ -26,7 +26,9 @@
 	au = !git add -u . && git status
 	aa = !git add . && git add -u . && git status
 	l = log --graph --all --pretty=format:'%C(yellow)%h%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
+	ll = log --pretty=format:'%C(yellow)%h%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset'
 	fa = fetch --all
+	clean = fetch origin --prune
 [github]
 	user = nbap
 [push]
