--- a/.gitconfig
+++ b/.gitconfig
@@ -37,6 +37,7 @@
 	editor = nano
 	whitespace = trailing-space
 	excludesfile = /Users/nbap/.gitignore_global
+	autocrlf = input
 [diff]
   tool = meld
 [difftool]
@@ -57,3 +58,11 @@
 	required = true
 [pull]
 	rebase = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[pager]
+	branch = false
