--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,16 @@
+# set Zsh as your default Tmux shell
+set-option -g default-shell /bin/zsh
+
+set -g mouse on
+
+# use 256 term for pretty colors
+set -g default-terminal "screen-256color"
+
+# Retach userspaces
+set -g default-command "reattach-to-user-namespace -l zsh"
+
+# increase scroll-back history
+set -g history-limit 5000
+
 set -g base-index 1
 set -g pane-base-index 1
-set -g mouse on
