--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g mouse on
 set -g default-terminal "screen-256color"
 
 # Retach userspaces
-set -g default-command "reattach-to-user-namespace -l zsh"
+#set -g default-command "reattach-to-user-namespace -l zsh"
 
 # increase scroll-back history
 set -g history-limit 5000
