--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,11 @@ set -g default-terminal "screen-256color"
 #set -g default-command "reattach-to-user-namespace -l zsh"
 
 # increase scroll-back history
-set -g history-limit 5000
+set -g history-limit 10000
 
 set -g base-index 1
 set -g pane-base-index 1
+
+#keep mouse selection
+#bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
